--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: postgres_container
+    container_name: postgres
     image: postgres:alpine
     env_file:
       - db.env
@@ -13,7 +13,7 @@ services:
       retries: 5
 
   nginx:
-    container_name: nginx_container
+    container_name: nginx
     image: nginx:stable-alpine
     ports:
       - 8080:80
@@ -23,7 +23,7 @@ services:
       - app
 
   app:
-    container_name: app_container
+    container_name: app
     command: gunicorn app.main:app --worker-class uvicorn.workers.UvicornWorker --workers 4 --bind 0.0.0.0:80
     build: .
     volumes:
